# api/src/docs/swagger.json
@@ -131,6 +131,37 @@
                         }
                     }
                 }
+            },
+            "delete": {
+                "security": [
+                    {
+                        "ApiKeyAuth": []
+                    }
+                ],
+                "produces": [
+                    "application/json"
+                ],
+                "tags": [
+                    "Task"
+                ],
+                "summary": "Taskを削除する",
+                "parameters": [
+                    {
+                        "type": "string",
+                        "description": "削除するTodoを指定するid",
+                        "name": "id",
+                        "in": "path",
+                        "required": true
+                    }
+                ],
+                "responses": {
+                    "200": {
+                        "description": "OK",
+                        "schema": {
+                            "$ref": "#/definitions/task.deleteTaskResponse"
+                        }
+                    }
+                }
             }
         }
     },
@@ -191,6 +222,15 @@
             }
         },
         "task.createTaskResponse": {
+            "type": "object",
+            "properties": {
+                "id": {
+                    "type": "string",
+                    "example": "4082ed31-263c-40ec-9d41-e9d274c6bca8"
+                }
+            }
+        },
+        "task.deleteTaskResponse": {
             "type": "object",
             "properties": {
                 "id": {
